fixed box alignment

--- a/webApp/static/css/index.css
+++ b/webApp/static/css/index.css
@@ -41,7 +41,8 @@ main .left .box {
   margin-left: 3.7rem;
   box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.11),
     0 0.1rem 0.1rem rgba(0, 0, 0, 0.04);
-  min-width: 47%;
+  /* min-width: 47%; */
+  width: 800px;
   border: 1px solid #000;
   font-size: 1.2rem;
   display: inline-block;
@@ -64,13 +65,19 @@ main .left .box:hover {
   
   main .left .box .details {
     padding-left: 1.2rem;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
   }
   main .left .box .details .categories {
     display: inline-flex;
     /* min-height: 20px; */
-    max-width: 20%;
-  }  
+    /* max-width: 20%; */
+    width: 100%;
+    overflow: hidden;
+  }
+
+  /* main .left .box .details .categories option {
+    font-size: 1.5rem;
+  } */
   main .left .box .details h1{
     font-weight: 700;
     color: var(--aquaColor);
